# vertigo

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  flake.nix  todo.txt
data/: CMakeLists.txt  vertigo.desktop
src/: CMakeLists.txt
src/fight/: CMakeLists.txt  billboard.cpp  billboard.h  boundingbox.cpp  boundingbox.h  building.cpp  building.h  collisionmanager.cpp  collisionmanager.h  collisionmesh.cpp  collisionmesh.h  condition.cpp  condition.h  conditionmanager.cpp  conditionmanager.h  mine.cpp  mine.h  module.cpp  module.h  modulemanager.cpp  modulemanager.h  navpoint.cpp  navpoint.h  object.cpp  object.h  scenario.cpp  scenario.h  sonar.cpp  sonar.h  surface.cpp  surface.h  target.cpp  target.h  turret.cpp  turret.h  turretbase.cpp  turretbase.h  vector.cpp  vector.h
src/fight/boats/: player.cpp  player.h  simpleboat.cpp  simpleboat.h
src/fight/effects/: CMakeLists.txt  billboard.cpp  billboard.h  bubble.cpp  bubble.h  effect.cpp  effect.h  effectmanager.cpp  effectmanager.h  projectile.cpp  projectile.h  trash.cpp  trash.h
src/fight/objects/: activeobject.cpp  activeobject.h  building.cpp  building.h  mine.cpp  mine.h  navpoint.cpp  navpoint.h  object.cpp  object.h  player.cpp  player.h  simpleobject.cpp  simpleobject.h  turret.cpp  turret.h  turretbase.cpp  turretbase.h
src/fight/surface/: CMakeLists.txt  betaspline.cpp  betaspline.h  element.cpp  element.h  surface.cpp  surface.h  tesselator.cpp  tesselator.h
src/fight/weapons/: gun.cpp  gun.h
src/game/: CMakeLists.txt  area.cpp  area.h  boat.cpp  boat.h  briefing.cpp  briefing.h  chapter.cpp  chapter.h  departure.cpp  departure.h  depot.cpp  depot.h  desktop.cpp  desktop.h  dialog.cpp  dialog.h  dialogframe.cpp  dialogframe.h  encom.cpp  encom.h  items.cpp  items.h  main.cpp  mainmenu.cpp  mainmenu.h  menu.cpp  menu.h  minimovie.cpp  minimovie.h  mission.cpp  mission.h  movie.cpp  movie.h  notebook.cpp  notebook.h  renderer.cpp  renderer.h  room.cpp  room.h  (+8 more)
src/gfx/: CMakeLists.txt  cliprect.cpp  cliprect.h  colortable.cpp  colortable.h  font.cpp  font.h  fontmanager.cpp  fontmanager.h  image.cpp  image.h  rle.cpp  rle.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h  video.cpp  video.h
src/hud/: activesonar.cpp  activesonar.h  autopilot.cpp  autopilot.h  beta.cpp  beta.h  crosshair.cpp  crosshair.h  digiblock.cpp  digiblock.h  energybar.cpp  energybar.h  heading.cpp  heading.h  horizon.cpp  horizon.h  hud.cpp  hud.h  master.cpp  master.h  mastermonitor.cpp  mastermonitor.h  meter.cpp  meter.h  radiomessage.cpp  radiomessage.h  shield.cpp  shield.h  sonarmonitor.cpp  sonarmonitor.h
src/sfx/: CMakeLists.txt  samplemap.cpp  samplemap.h  sound.cpp  sound.h  soundsystem.cpp  soundsystem.h  stream.cpp  stream.h
src/txt/: CMakeLists.txt  desfile.cpp  desfile.h  stringtable.cpp  stringtable.h
src/ui/: CMakeLists.txt  arrow.cpp  arrow.h  button.cpp  button.h  frame.cpp  frame.h  itemlist.cpp  itemlist.h  label.cpp  label.h  list.cpp  list.h  widget.cpp  widget.h
src/util/: CMakeLists.txt  colortable.cpp  colortable.h  core.h  debug.h  deferreddeletable.cpp  deferreddeletable.h  error.cpp  error.h  event.hpp  file.cpp  file.h  geometry2d.h  geometry3d.h  rect.hpp  rle.cpp  rle.h  size.hpp
